FIX: Fix image overflow issue on image-container

--- a/yourapp/static/css/style.css
+++ b/yourapp/static/css/style.css
@@ -308,6 +308,7 @@ img {
     width: 100%;
     /*padding: 12px 18px;*/
 
+    overflow: hidden;
 
     display: flex;
     flex-wrap: wrap;
